fixed overflow

--- a/styles/index-desktop.css
+++ b/styles/index-desktop.css
@@ -1,6 +1,6 @@
 body {
     height: 100%;
-    overflow: auto;
+    overflow-x: hidden;
     margin: 0;
     padding: 0;
     left: 0;
